# pujbase

./: .gitignore  .gitmodules  README.md  accents.proto  accents.yml  build_dist.sh  combinations.txt  data.proto  entries.proto  entries.tsv  entries.yml  generate_accents_db.py  generate_entries_db.py  generate_phrases_db.py  generate_protobuf.sh  phrases.proto  pujcommon.py  pujpb.py  pujutils.py  pyproject.toml  requirements.txt  tool_get_all_combinations.py
.github/workflows/: build_pb.yml
data/: accents.yml  accents_expected.csv  entries.yml  fuzzy_rules.yml  phrases.examples.yml  phrases.yml
data/phrases/: animals.csv  fruits.csv  onomatopoeia_kio.csv  relationships.csv  specialties.csv  vegetables.csv  verbs.csv
data/phrases/std/DuffusWilliam/: DuffusWilliam.std.yml
data/phrases/std/SwatowDialectPhrases/: SwatowDialectPhrases2.std.yml
libpuj/: accents.proto  data.proto  entries.proto  generate_db.py  generate_entries_db.py  generate_phrases_db.py  phrases.proto  pujcommon.py  pujpb.py  pujutils.py
phrases/: animals.csv  fruits.csv  human_body.csv  musical.csv  onomatopoeia_aab.csv  onomatopoeia_kio.csv  relationships.csv  seafood.csv  specialties.csv  vegetables.csv  verbs.csv
src/: accents.proto  entries.proto  generate_accents_db.py  generate_db.py  generate_entries_db.py  generate_phrases_db.py  phrases.proto  pujcommon.py  pujutils.py
tests/: test_accents.py  test_accents_expected.py  test_conversions.py
